# ros2-study

./: .gitignore  readme.md
docs/daily_logs/: daily_reflection_template.md
docs/daily_logs/week1/: day1_reflection.md  day2_reflection.md
docs/technical_notes/: readme.md  ros2_concepts.md  ros2_launch..md  ros2_tf2.md
docs/weekly_summary/: weekly_template.md
week1_ros2_basics/: readme.md
week1_ros2_basics/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
week1_ros2_basics/install/robot_communication/share/robot_communication/: package.sh
week1_ros2_basics/install/simple_communication/lib/simple_communication/: robot_status_publisher  robot_status_subscriber
week1_ros2_basics/install/simple_communication/share/simple_communication/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
week1_ros2_basics/log/: latest_build
week1_ros2_basics/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
week1_ros2_basics/src/log/: latest_build
week1_ros2_basics/src/robot_communication/: package.xml  setup.py
week1_ros2_basics/src/robot_communication/robot_communication/: static_tf_pub
week1_ros2_basics/src/simple_communication/: CMakeLists.txt  package.xml  setup.cfg  setup.py
week1_ros2_basics/src/simple_communication/simple_communication/: robot_info_client.py  robot_info_service.py
week1_ros2_basics/src/simple_communication/srv/: GetRobotInfo.srv
week2_slam/: frames_2025-09-26_20.53.40.gv  readme.md
week2_slam/install/: local_setup.sh  setup.sh
week2_slam/log/: latest_build
(+43 files in other folders)
